force-app/main/default/objects/Portfolio__c/fields/Available_Margin__c.field-meta.xml
<CustomField>
    <fullName>Available_Margin__c</fullName>
    <formula>Available_Balance__c - Margin_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>