force-app/main/default/objects/Portfolio__c/fields/Daily_P_L__c.field-meta.xml
<CustomField>
    <fullName>Daily_P_L__c</fullName>
    <label>Daily P&amp;L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>