force-app/main/default/objects/Portfolio__c/fields/Initial_Capital__c.field-meta.xml
<CustomField>
    <fullName>Initial_Capital__c</fullName>
    <label>Initial Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>