force-app/main/default/objects/Portfolio__c/fields/Margin_Used__c.field-meta.xml
<CustomField>
    <fullName>Margin_Used__c</fullName>
    <label>Margin Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>