force-app/main/default/objects/Portfolio__c/fields/Maximum_Drawdown__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Drawdown__c</fullName>
    <label>Maximum Drawdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>