force-app/main/default/objects/Portfolio__c/fields/Number_of_Closed_Trades__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Closed_Trades__c</fullName>
    <label>Number of Closed Trades</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>