force-app/main/default/objects/Portfolio__c/fields/Portfolio_ID__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_ID__c</fullName>
    <displayFormat>PF-{00000}</displayFormat>
    <label>Portfolio ID</label>
    <type>AutoNumber</type>
</CustomField>