force-app/main/default/objects/Portfolio__c/fields/Portfolio_Return__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Return__c</fullName>
    <formula>IF(
Initial_Capital__c &gt; 0,
(Current_Value__c - Initial_Capital__c)
/ Initial_Capital__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio Return %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>