force-app/main/default/objects/Portfolio__c/fields/Portfolio_Type__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Type__c</fullName>
    <label>Portfolio Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Commodity</fullName>
            </value>
            <value>
                <fullName>Crypto</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Futures</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>