force-app/main/default/objects/Portfolio__c/fields/Profit_Status__c.field-meta.xml
<CustomField>
    <fullName>Profit_Status__c</fullName>
    <formula>IF(
Current_Value__c &gt;
Initial_Capital__c,
&quot;Profit&quot;,
IF(
Current_Value__c &lt;
Initial_Capital__c,
&quot;Loss&quot;,
&quot;Break Even&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Status</label>
    <type>Text</type>
</CustomField>