force-app/main/default/objects/Portfolio__c/fields/Realized_P_L__c.field-meta.xml
<CustomField>
    <fullName>Realized_P_L__c</fullName>
    <description>Profit/Loss after closed trades.</description>
    <inlineHelpText>Profit/Loss after closed trades.</inlineHelpText>
    <label>Realized P&amp;L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>