force-app/main/default/objects/Portfolio__c/fields/Total_Trades__c.field-meta.xml
<CustomField>
    <fullName>Total_Trades__c</fullName>
    <formula>Number_of_Active_Trades__c + Number_of_Closed_Trades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Trades</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>