force-app/main/default/objects/Portfolio__c/fields/Trader__c.field-meta.xml
<CustomField>
    <fullName>Trader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trader</label>
    <referenceTo>Trader__c</referenceTo>
    <relationshipLabel>Portfolios</relationshipLabel>
    <relationshipName>Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>