force-app/main/default/objects/Portfolio__c/fields/Unrealized_P_L__c.field-meta.xml
<CustomField>
    <fullName>Unrealized_P_L__c</fullName>
    <description>Profit/Loss on open trades.</description>
    <inlineHelpText>Profit/Loss on open trades.</inlineHelpText>
    <label>Unrealized P&amp;L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>