force-app/main/default/objects/Portfolio__c/fields/Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Win_Rate__c</fullName>
    <label>Win Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>