force-app/main/default/objects/Portfolio__c/validationRules/Available_Balance_cannot_exceed_Current.validationRule-meta.xml
<ValidationRule>
    <fullName>Available_Balance_cannot_exceed_Current</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Balance__c &gt;
Current_Value__c</errorConditionFormula>
    <errorDisplayField>Available_Balance__c</errorDisplayField>
    <errorMessage>Available Balance cannot exceed Current Value.</errorMessage>
</ValidationRule>