force-app/main/default/objects/Portfolio__c/validationRules/Current_Value_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Value_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Current_Value__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Current_Value__c</errorDisplayField>
    <errorMessage>Current Value cannot be negative</errorMessage>
</ValidationRule>