force-app/main/default/objects/Portfolio__c/validationRules/Initial_Capital_must_be_greater_than_zer.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_Capital_must_be_greater_than_zer</fullName>
    <active>true</active>
    <errorConditionFormula>Initial_Capital__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Initial_Capital__c</errorDisplayField>
    <errorMessage>Initial Capital must be greater than zero.</errorMessage>
</ValidationRule>